package rest.order.DefineEnum;

public enum MenuType {
    Beverage, liquor, Desert, Appetizers, MainCuisine
}
