package rest.order.DefineEnum;

public enum UserClass {
    admin, guset, master, firstGrade, secondGrade, visitor
}
