package rest.order.Repository;

import org.springframework.data.jpa.repository.JpaRepository;

import rest.order.Model.Records;

public interface RecordsRepo extends JpaRepository<Records, Long>{
    
}
