package rest.order.Repository;

import org.springframework.data.jpa.repository.JpaRepository;

import rest.order.Model.Table;

public interface TableRepo extends JpaRepository<Table,Long> {
    
}
