package rest.order.Service;

import org.springframework.stereotype.Service;

import rest.order.Model.Menu;

@Service
public class MenuService {
    
    private Menu menu;

    public MenuService(Menu menu) {
        this.menu = menu;
    }
    
    public String menuName() {
        return "WelcomeMenu";
        
    }
}
