package rest.order.Service;

import rest.order.Repository.RecordsRepo;

public class RecordService {
    private RecordsRepo recordsRepo;

    public RecordService(RecordsRepo recordsRepo) {
        this.recordsRepo = recordsRepo;
    }

}
